--- a/style.css
+++ b/style.css
@@ -1,205 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=PT+Serif");
-@import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
+@import url(nav-header.css);
+@import url(banner.css);
+@import url(info-section.css);
+@import url(preview.css);
+@import url(footer.css);
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-html {
-    font: 17px/1.5 'PT Sans';
-}
-
-.header {
-    display: flex;
-    flex-direction: column;
-    background-image: url('images/background.jpg'); /* Replace 'path/to/your/image.jpg' with the path to your image */
-    background-size: cover; /* Adjust the background size as needed */
-    background-position: center top; /* Image will be cut from the top and bottom */
-    width: 100%;
-    height: 940px;
-}
-
-.header header {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem;
-    text-align: center;
-    align-items: center;
-}
-
-.logo {
-    width: auto;
-    height: 100px;
-}
-
-.logo img {
-    width: auto;
-    height: 100%;
-    display: block;
-}
-
-nav ul:not(.first-part nav ul) {
-    list-style-type: none;
-    padding: 0;
-    text-align: center; /* This will center the text within the nav */
-}
-
-nav ul li:not(.first-part nav ul li) {
-    display: inline;
-    margin-right: 20px; /* Adjust this value according to your preference */
-}
-
-nav ul li:last-child {
-    margin-right: 0; /* Remove the right margin for the last list item */
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: white; /* Change the color as per your requirement */
-}
-
-.header h1 {
-    font-size: 70px;
-    color: white;
-    font-family: 'PT Serif';
-    font-weight: 500;
-}
-
-.header section {
-    padding-left: 13rem;
-}
-
-.header section p {
-    padding-top: 1.7rem;
-    color: white;
-    font-size: 25px;
-    width: 58ch;
-    line-height: 1.7;
-}
-
-.main-info-1 {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    padding-top: 5rem;
-    border-bottom: 2px solid #cccccc;
-    padding-bottom: 5rem;
-}
-
-.main-info-1 .main-info-1-text {
-    width: 64ch;
-}
-
-.main-info-1 .main-info-1-text h1 {
-    font-family: 'PT Serif';
-    font-weight: 500;
-    font-size: 45px;
-    padding-bottom: 1rem;
-}
-
-.main-info-1-text p {
-   padding-bottom: 2rem;
-}
-
-.main-info-1-text form button {
-    padding: 0.7rem 1.7rem;
-    border: 2px solid #b0825c;
-    color: #b0825c;
-    background-color: white;
-}
-
-.sponsors {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 2rem;
-}
-
-h1 {
-    font-family: "PT Serif";
-}
-
-.sponsors-text {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-.sponsors-text h1 {
-    text-align: center;
-    font-size: 50px;
-    padding-bottom: 1rem;
-    color: #b0825c;
-    font-weight: 500;
-}
-
-.sponsors-text p {
-    text-align: center;
-    width: 129ch;
-}
-
-.sponsors-imgs {
-    display: flex;
-    align-items: center;
-    gap: 3rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-.sponsors-img {
-    width: 170px;
-    height: 170px;
-    background-color: #dddddd;
-    border-radius: 50%;
-    padding: 2rem;
-}
-
-.sponsors-img img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.footer {
-    background-color: #171720;
-    display: flex;
-    flex-direction: column;
-    color: #b3a6a8;
-    padding-top: 2rem;
-}
-
-.first-part {
-    display: flex;
-    gap: 5rem;
-    border-bottom: 2px solid #3a3a41;
-}
-
-.first-part nav ul li a {
-    color: #b3a6a8;
-    font-size: 15px;
-}
-
-.first-part nav ul {
-    list-style-type: none;
-}
-
-.first-part nav ul li:nth-child(1) {
-    color: white;
-    font-size: 24px;
-    padding-bottom: 1.5rem;
-    font-family: "PT Serif";
-}
-
-.first-part nav ul li:not(.first-part nav ul li:nth-child(1)) {
-    padding-bottom: 0.7rem;
-    text-transform: uppercase;
-}
-
-.footer footer {
-    padding-left: 19rem;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-}
-
 
