Made the navigation bar responsive

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import url(info-section.css);
 @import url(preview.css);
 @import url(footer.css);
-
+@import url(mobile.css);
 * {
     padding: 0;
     margin: 0;
