--- a/mobile.css
+++ b/mobile.css
@@ -15,7 +15,6 @@
 
     .nav-header a {
         flex: 1;
-        max-width: 30%;
         margin: 0;
     }
 
@@ -40,7 +39,8 @@
     }
 
     .fa-bars {
-        cursor: pointer; /* Add a pointer cursor to indicate interactivity */
+        cursor: pointer;
+        /* Add a pointer cursor to indicate interactivity */
     }
 
     .cars-container h1 {
@@ -55,6 +55,103 @@
         width: 88%;
     }
 
+    .menuItem {
+        display: none;
+        margin: 2rem 4rem;
+        font-size: 1.8rem;
+        color: white;
+        text-decoration: none;
+    }
+
+    .menuItem:hover {
+        text-decoration: underline;
+    }
+
+    .hamburger.active {
+        position: fixed;
+        z-index: 100;
+        top: 1rem;
+        right: 1rem;
+    }
+
+    .hamburger {
+        position: relative;
+        z-index: 1;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 4px;
+        border: black solid 0px;
+        background: 0;
+        cursor: pointer;
+    }
+
+    .hamburger span {
+        font-size: 12px;
+    }
+
+    .closeIcon {
+        display: none;
+    }
+
+    .menu {
+        position: fixed;
+        transform: translateY(-100%);
+        transition: transform 0.2s;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 99;
+        background: black;
+        color: white;
+        list-style: none;
+        padding-top: 4rem;
+    }
+
+    .showMenu .menuItem {
+        display: block;
+    }
+
+    .showMenu {
+        transform: translateY(0);
+        padding: 2rem;
+    }
+
+    .showMenu li .menuItem {
+        font-size: 12px;
+        text-align: left;
+        padding-bottom: 0.5rem;
+    }
+
+    .showMenu li .menuItem i {
+        padding-right: 0.5rem;
+    }
+
+    .nav-header {
+        position: relative;
+        transition: top 0.5s ease-in-out; /* Adjust the transition speed and timing function as needed */
+    }
+
+    .fixed-header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+        height: 70px;
+    }
+    
+    .fixed-header .fixed-logo {
+        height: 70px;
+    }
+
+}
+
+@media (max-width: 600px) and (min-width: 501px) {
+    .nav-header a {
+        width: 23%;
+        flex: 0;
+    }
 }
 
 @media (max-width: 362px) {
@@ -64,5 +161,12 @@
 
     .nav-header h1 {
         font-size: 2.5vw;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav-header a {
+        width: 30%;
+        flex: 0;
     }
 }
