--- a/nav-header.css
+++ b/nav-header.css
@@ -1,9 +1,8 @@
 @media (min-width:600px) {
 
-    .nav-header nav:nth-child(3) {
+    .nav-header div:nth-child(3) {
         display: none;
     }
-
 }
 
 .nav-header {
