--- a/footer.css
+++ b/footer.css
@@ -1,4 +1,5 @@
 footer {
+    font-family: 'Poppins', sans-serif;
     background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(92,90,97,1) 8%, rgba(129,125,140,1) 26%, rgba(128,124,139,1) 33%, rgba(165,158,181,1) 39%, rgba(111,108,120,1) 77%);
 }
 
@@ -49,4 +50,18 @@ footer {
     padding-top: 2rem;
     padding-bottom: 0;
     font-size: 14px;
+}
+
+.socials-section span {
+    padding-top: 1em;
+    padding-right: 0.5rem;
+    font-size: 17px;
+}
+
+.socials-section i {
+    padding-right: 0.5rem;
+}
+
+.socials-section {
+    padding-top: 0.8rem;
 }
