--- a/nav-header.css
+++ b/nav-header.css
@@ -1,4 +1,4 @@
-@media (min-width:600px) {
+@media (min-width:601px) {
 
     .nav-header div:nth-child(3) {
         display: none;
@@ -39,19 +39,31 @@
 
 .nav-header nav:nth-child(4) ul li {
     display: inline;
-    padding: 1rem;
 }
 
 .nav-header nav:nth-child(1) ul li {
     display: inline;
-    padding: 1.8rem;
 }
 
 .nav-header nav:nth-child(1) ul li:last-child {
     display: inline;
-    padding: 2.4rem;
 }
 
+.nav-header nav:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-header nav:nth-child(4) nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-header nav:nth-child(4) nav ul li {
+    flex: 1 1 30%;
+    text-align: center;
+}
 
 a {
     text-decoration: none;
