--- a/preview.css
+++ b/preview.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(79,78,83,1) 16%, rgba(87,85,92,1) 26%, rgba(129,125,140,1) 52%, rgba(165,158,181,1) 90%);
+    padding-bottom: 2rem;
 }
 
 body .cars-container:nth-child(4) {
