--- a/mobile.css
+++ b/mobile.css
@@ -44,7 +44,6 @@
 
     .fa-bars {
         cursor: pointer;
-        /* Add a pointer cursor to indicate interactivity */
     }
 
     .cars-container h1 {
@@ -56,7 +55,7 @@
     }
 
     .car-card {
-        width: 88%;
+        width: 82%;
     }
 
     .menuItem {
@@ -135,7 +134,7 @@
 
     .nav-header {
         position: relative;
-        transition: top 0.5s ease-in-out; /* Adjust the transition speed and timing function as needed */
+        transition: top 0.5s ease-in-out;
     }
 
     .fixed-header {
