--- a/nav-header.css
+++ b/nav-header.css
@@ -15,6 +15,97 @@
     color: #ffffff;
 }
 
+.menuItem {
+    display: none;
+    margin: 2rem 4rem;
+    font-size: 1.8rem;
+    color: white;
+    text-decoration: none;
+}
+
+.menuItem:hover {
+    text-decoration: underline;
+}
+
+.hamburger.active {
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+}
+
+.hamburger {
+    position: relative;
+    z-index: 1;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4px;
+    border: black solid 0px;
+    background: 0;
+    cursor: pointer;
+}
+
+.hamburger span {
+    font-size: 12px;
+}
+
+.closeIcon {
+    display: none;
+}
+
+.menu {
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background: black;
+    color: white;
+    list-style: none;
+    padding-top: 4rem;
+}
+
+.showMenu .menuItem {
+    display: block;
+}
+
+.showMenu {
+    transform: translateY(0);
+    padding: 2rem;
+}
+
+.showMenu li .menuItem {
+    font-size: 12px;
+    text-align: left;
+    padding-bottom: 0.5rem;
+    width: 30ch;
+}
+
+.showMenu li .menuItem i {
+    padding-right: 0.5rem;
+}
+
+.nav-header {
+    position: relative;
+    transition: top 0.5s ease-in-out;
+}
+
+.fixed-header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    height: 70px;
+}
+
+.fixed-header .fixed-logo {
+    height: 70px;
+}
+
 .logo {
     margin-left: 2rem;
 }
@@ -88,7 +179,6 @@ a {
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: fit-content;
     margin: 0 auto;
 }
 
