--- a/banner.css
+++ b/banner.css
@@ -1,18 +1,33 @@
 .site-banner {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+    width: 100%;
+    white-space: nowrap;
     overflow: hidden;
+    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+}
+
+.site-banner-inner {
+    display: flex;
+    animation: scroll 30s linear infinite;
+    gap: 1rem;
 }
 
 .banner-img {
-    flex: 1 1 calc(33% - 2rem);
+    flex: 1 0 calc(33% - 2rem);
     overflow: hidden;
-    border-radius: 15px;
 }
 
 .banner-img img {
     width: 100%;
     height: 100%;
+    border-radius: 35px;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
