--- a/banner.css
+++ b/banner.css
@@ -1,6 +1,6 @@
 .site-banner {
     width: 100%;
-    white-space: nowrap;
+    display: flex;
     overflow: hidden;
     background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
@@ -12,14 +12,17 @@
 }
 
 .banner-img {
-    flex: 1 0 calc(33% - 2rem);
+    flex-grow: 1;
+    width: 500px;
+    height: 500px;
     overflow: hidden;
 }
 
 .banner-img img {
+    border-radius: 35px;
     width: 100%;
     height: 100%;
-    border-radius: 35px;
+    object-fit: cover;
 }
 
 @keyframes scroll {
@@ -28,6 +31,6 @@
     }
 
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-50%);
     }
 }
