--- a/banner.css
+++ b/banner.css
@@ -6,6 +6,7 @@
 }
 
 .site-banner-inner {
+    padding: 1.5rem 0;
     display: flex;
     animation: scroll 30s linear infinite;
     gap: 1rem;
@@ -13,16 +14,29 @@
 
 .banner-img {
     flex-grow: 1;
-    width: 500px;
-    height: 500px;
+    height: 400px; /* Set the height of the container */
+    width: calc(400px + (400px * 0.395)); 
     overflow: hidden;
 }
 
 .banner-img img {
-    border-radius: 35px;
+    border-radius: 15px;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.site-banner-inner .banner-img:nth-child(5) img {
+    object-position: 43% center;
+}
+
+.site-banner-inner .banner-img:nth-child(3) img {
+    object-position: bottom;
+}
+
+
+.site-banner-inner .banner-img:nth-child(1) img {
+    object-position: 20% 62%;
 }
 
 @keyframes scroll {
