--- a/banner.css
+++ b/banner.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     overflow: hidden;
-    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+    background: linear-gradient(90deg, rgba(2,0,6,1) 0%, rgba(8,10,37,1) 0%, rgba(8,9,36,1) 0%, rgba(7,11,60,1) 0%, rgba(2,0,6,1) 0%, rgba(6,12,76,1) 0%, rgba(10,13,46,1) 0%, rgba(2,0,6,1) 0%, rgba(6,12,76,1) 0%, rgba(6,12,76,1) 0%, rgba(8,9,36,1) 0%, rgba(2,0,6,1) 53%, rgba(8,9,36,1) 100%, rgba(2,0,6,1) 100%);
 }
 
 .site-banner-inner {
