--- a/info-section.css
+++ b/info-section.css
@@ -1,8 +1,6 @@
 .info-section {
-    background: linear-gradient(90deg, #ff2a00 0%, #333333 0%, #a59eb5 100%);
-    padding: 30px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: 'Poppins', sans-serif;
+    background: rgb(8,9,35);
+    background: linear-gradient(95deg, rgba(8,9,35,1) 0%, rgba(2,2,10,1) 0%, rgba(8,9,35,1) 21%, rgba(8,9,35,1) 30%, rgba(8,9,35,1) 83%, rgba(2,2,9,1) 100%);    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -35,7 +33,8 @@
 
 .cta-button {
     display: inline-block;
-    background-color: #a59eb5;
+    background: rgb(4,4,11);
+    background: linear-gradient(95deg, rgba(4,4,11,1) 0%, rgba(20,30,162,1) 0%, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
     color: #fff;
     padding: 12px 30px;
     text-decoration: none;
@@ -45,6 +44,7 @@
 }
 
 .cta-button:hover {
-    background-color: #8c8292;
+    filter: brightness(120%); /* Adjust the brightness percentage as needed */
+
 }
 
