--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,6 @@
 footer {
     font-family: 'Poppins', sans-serif;
-    background: rgb(24, 26, 63);
-    background: linear-gradient(95deg, rgba(24, 26, 63, 1) 0%, rgba(1, 3, 28, 1) 0%, rgba(10, 11, 43, 1) 100%);
+    background: linear-gradient(95deg, rgba(1, 3, 28, 1) 0%, rgba(10, 11, 43, 1) 100%);
 }
 
 .footer-section {
@@ -35,7 +34,7 @@ footer {
     padding: 10px 20px;
     border-radius: 0 5px 5px 0;
     border: 0px solid black;
-    background: linear-gradient(95deg, rgba(4,4,11,1) 0%, rgba(20,30,162,1) 0%, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
+    background: linear-gradient(95deg, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
     color: #ffffff;
     cursor: pointer;
     transition: all 0.3s;
