--- a/info-section.css
+++ b/info-section.css
@@ -1,6 +1,7 @@
 .info-section {
     background: rgb(8,9,35);
-    background: linear-gradient(95deg, rgba(8,9,35,1) 0%, rgba(2,2,10,1) 0%, rgba(8,9,35,1) 21%, rgba(8,9,35,1) 30%, rgba(8,9,35,1) 83%, rgba(2,2,9,1) 100%);    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(95deg, rgba(8,9,35,1) 83%, rgba(2,2,9,1) 100%);    
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -33,7 +34,7 @@
 
 .cta-button {
     display: inline-block;
-    background: linear-gradient(95deg, rgba(4,4,11,1) 0%, rgba(20,30,162,1) 0%, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
+    background: linear-gradient(95deg, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
     color: #fff;
     padding: 12px 30px;
     text-decoration: none;
