--- a/banner.css
+++ b/banner.css
@@ -3,7 +3,7 @@
     display: flex;
     overflow: hidden;
     background: rgb(17, 17, 52);
-    background: linear-gradient(95deg, rgba(17, 17, 52, 1) 0%, rgba(7, 8, 29, 1) 100%);
+    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
 
 .site-banner-inner {
