--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,6 @@
 footer {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(95deg, rgba(1, 3, 28, 1) 0%, rgba(10, 11, 43, 1) 100%);
+    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(92,90,97,1) 8%, rgba(129,125,140,1) 26%, rgba(128,124,139,1) 33%, rgba(165,158,181,1) 39%, rgba(111,108,120,1) 77%);
 }
 
 .footer-section {
@@ -33,8 +33,8 @@ footer {
 .subscribe-form button {
     padding: 10px 20px;
     border-radius: 0 5px 5px 0;
-    border: 0px solid black;
-    background: linear-gradient(95deg, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
+    border: 1px solid #a59eb5;
+    background-color: #a59eb5;
     color: #ffffff;
     cursor: pointer;
     transition: all 0.3s;
