--- a/info-section.css
+++ b/info-section.css
@@ -1,6 +1,6 @@
 .info-section {
     background: rgb(8,9,35);
-    background: linear-gradient(95deg, rgba(8,9,35,1) 83%, rgba(2,2,9,1) 100%);    
+    background: linear-gradient(90deg, #ff2a00 0%, #333333 0%, #a59eb5 100%);    
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
@@ -34,8 +34,7 @@
 
 .cta-button {
     display: inline-block;
-    background: linear-gradient(95deg, rgba(23,23,103,1) 0%, rgba(21,24,79,1) 100%);
-    color: #fff;
+    background-color: #a59eb5;
     padding: 12px 30px;
     text-decoration: none;
     border-radius: 5px;
@@ -44,6 +43,7 @@
 }
 
 .cta-button:hover {
-    filter: brightness(120%);
+    background-color: #8c8292;
+
 }
 
