--- a/nav-header.css
+++ b/nav-header.css
@@ -17,7 +17,7 @@
     padding: 1.3rem 3.2rem;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(95deg, rgba(8, 9, 35, 1) 83%, rgba(2, 2, 9, 1) 100%);
+    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 0%, rgba(79, 78, 83, 1) 16%, rgba(87, 85, 92, 1) 26%, rgba(129, 125, 140, 1) 52%, rgba(165, 158, 181, 1) 90%);    
     position: sticky;
     top: 0;
     background-color: white;
@@ -187,10 +187,9 @@ a {
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+    background-color: #7D7C7C;
     letter-spacing: 2px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    background: rgb(4, 4, 11);
-    background: linear-gradient(95deg, rgba(21, 25, 74, 1) 76%, rgba(7, 9, 48, 1) 100%);
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
