--- a/preview.css
+++ b/preview.css
@@ -4,8 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background: rgb(0, 1, 16);
-    background: linear-gradient(95deg, rgba(8, 9, 35, 1) 100%);
+    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(79,78,83,1) 16%, rgba(87,85,92,1) 26%, rgba(129,125,140,1) 52%, rgba(165,158,181,1) 90%);
 }
 
 .cars-container h1 {
@@ -27,7 +26,7 @@ body .cars-container:nth-child(4) {
 }
 
 .car-card {
-    background: linear-gradient(95deg, rgba(24,26,63,1) 83%, rgba(8,9,35,1) 100%);
+    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(92,90,97,1) 0%, rgba(111,108,120,1) 0%, rgba(129,125,140,1) 9%, rgba(128,124,139,1) 11%, rgba(165,158,181,1) 75%);
     width: 29%;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
