--- a/info-section.css
+++ b/info-section.css
@@ -1,6 +1,7 @@
 .info-section {
     background: rgb(8,9,35);
-    background: linear-gradient(90deg, #ff2a00 0%, #333333 0%, #a59eb5 100%);    
+    background: linear-gradient(90deg, #ff2a00 0%, #333333 0%, #a59eb5 100%);
+    padding: 30px;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
@@ -44,6 +45,5 @@
 
 .cta-button:hover {
     background-color: #8c8292;
-
 }
 
