--- a/mobile.css
+++ b/mobile.css
@@ -18,10 +18,6 @@
         padding-right: 1rem;
     }
 
-    .nav-header .h1 {
-        left: 54%;
-    }
-
     .nav-header .logo {
         padding-bottom: 0.5rem;
         padding-top: 0.2rem;
@@ -41,7 +37,11 @@
     }
 
     .nav-header a img {
-        height: 70px;
+        height: 9.5vh;
+    }
+
+    .nav-header .h1 {
+        left: 52%;
     }
 
     .nav-header .h1 h1 {
@@ -189,10 +189,6 @@
 
     .site-banner {
         gap: 0.5rem;
-    }
-
-    .nav-header a img {
-        height: 51px;
     }
 
     .nav-header .h1 h1 {
