Adjusted banner and fixed lag in the animation

--- a/nav-header.css
+++ b/nav-header.css
@@ -170,7 +170,7 @@ a {
 
 .nav-header .h1 h1{
     font-family: 'Arial', sans-serif;
-    font-size: 24px;
+    font-size: 1.5vw;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
