--- a/banner.css
+++ b/banner.css
@@ -7,6 +7,7 @@
 }
 
 .site-banner-inner {
+    will-change: transform;
     width: calc((100vw * 3.5) / 4);
     padding: 1.5rem 0;
     display: flex;
@@ -20,18 +21,10 @@
     }
 }
 
-@media (min-width: 601px) and (max-width: 1400px) {
+@media (min-width: 601px) {
     .banner-img {
-        height: 40vh;
-        flex: 1 0 calc(40vh + (40vh * 0.395));
-        overflow: hidden;
-    }
-}
-
-@media (min-width: 1401px) {
-    .banner-img {
-        height: 40vh;
-        flex: 1 0 calc(40vh + (40vh * 0.395));
+        height: 50vh;
+        flex: 1 0 calc(50vh + (50vh * 0.395));
         overflow: hidden;
     }
 }
