--- a/banner.css
+++ b/banner.css
@@ -3,14 +3,13 @@
     display: flex;
     overflow: hidden;
     background: rgb(17, 17, 52);
-    background: linear-gradient(90deg, rgba(51, 51, 51, 1) 9%, rgba(87, 85, 92, 1) 42%, rgba(165, 158, 181, 1) 100%);
+    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
 
 .site-banner-inner {
     animation: slide 20s linear infinite;
     transition: transform 0.3s ease;
-    will-change: transform;
-    width: calc((100vw * 3.5) / 4);
+    width: 100%;
     padding: 1.5rem 0;
     display: flex;
     gap: 1rem;
