--- a/auto-show.css
+++ b/auto-show.css
@@ -1,5 +1,61 @@
-#model-container {
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
+header {
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+body {
+    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    height: 100vh; /* Set body height to 100% of viewport height */
+}
+
+header {
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+section {
+    flex: 1;
+    padding: 20px;
+}
+
+.show-room {
+    background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
+}
+
+.view-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    margin-bottom: 1rem;
+    border-radius: 15px;
+}
+
+section .cars-container {
+    background:none;
+}
+
+.car-card img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.car-card {
+    text-align: center;
+}
+
+section h2 {
+    text-align: center;
 }
