--- a/showroom.css
+++ b/showroom.css
@@ -12,3 +12,9 @@
 body {
     background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
+
+@media (max-width: 567px) {
+    body #model-container {
+        height: 55vh;
+    }
+}
