--- a/showroom.css
+++ b/showroom.css
@@ -9,6 +9,12 @@
     border-radius: 20px;
 }
 
+#model-container canvas:nth-of-type(1) {
+    position: absolute;
+    display: none;
+}
+
+
 body {
     background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
@@ -16,5 +22,9 @@ body {
 @media (max-width: 567px) {
     body #model-container {
         height: 55vh;
+    }
+
+    button {
+        display: none;
     }
 }
