--- a/preview.css
+++ b/preview.css
@@ -3,7 +3,7 @@
     color: white;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(79,78,83,1) 16%, rgba(87,85,92,1) 26%, rgba(129,125,140,1) 52%, rgba(165,158,181,1) 90%);
 }
 
