--- a/mobile.css
+++ b/mobile.css
@@ -77,7 +77,7 @@
 
     .menuItem {
         display: none;
-        margin: 2rem 4rem;
+        margin: 0.3rem 0;
         font-size: 1.8rem;
         color: white;
         text-decoration: none;
@@ -168,6 +168,73 @@
 
 }
 
+
+.menuItem:hover {
+    text-decoration: underline;
+}
+
+.hamburger.active {
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+}
+
+.hamburger {
+    position: relative;
+    z-index: 1;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4px;
+    border: black solid 0px;
+    background: 0;
+    cursor: pointer;
+}
+
+.hamburger span {
+    font-size: 12px;
+}
+
+.closeIcon {
+    display: none;
+}
+
+.menu {
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background: black;
+    color: white;
+    list-style: none;
+    padding-top: 4rem;
+}
+
+.showMenu .menuItem {
+    display: block;
+}
+
+.showMenu {
+    transform: translateY(0);
+    padding: 2rem;
+}
+
+.showMenu li .menuItem {
+    font-size: 12px;
+    text-align: left;
+    padding-bottom: 0.5rem;
+    width: 30ch;
+}
+
+.showMenu li .menuItem i {
+    padding-right: 0.5rem;
+}
+
 @media (max-width: 600px) and (min-width: 501px) {
     .nav-header a {
         width: 23%;
@@ -177,10 +244,10 @@
 
 @media (max-width:900px) {
     .cars-container .car-card {
-         width: 82%;
-     }
- }
- 
+        width: 82%;
+    }
+}
+
 
 @media (max-width: 362px) {
 
