--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
-@import url(navigation-header.css);
+@import url(nav-header.css);
 @import url(banner.css);
 @import url(info-section.css);
 @import url(preview.css);
