--- a/public/profile.css
+++ b/public/profile.css
@@ -67,7 +67,7 @@ body {
 /* Responsive styles for smaller screens */
 @media (max-width: 768px) {
     .profile-info {
-        padding: 0 20px;
+        padding: 0 10px;
     }
 }
 
@@ -82,6 +82,7 @@ body {
 }
 
 .profile-info .toggle-password {
+    display: none;
     cursor: pointer;
     color: #888;
     margin-top: 2.4rem;
@@ -89,7 +90,74 @@ body {
     right: 0.5rem;
 }
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-webkit-reveal {
+  display: none !important;
+}
+
+#new-password-eye {
+    margin-top: 5.9rem;
+}
+
+#new-password-repeat-eye {
+    margin-top: 9.4rem;
+}
+
 #favorite-vehicles li .car-card {
     width: fit-content;
     max-width: 268px;
+}
+
+#username-container,
+#email-container {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    gap: 0.5rem;
+}
+
+#change-username,
+#cancel,
+#change-email,
+#cancel-email,
+#change-password {
+    padding: 10px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #333;
+    font-size: 16px;
+}
+
+@media (max-width: 928px) {
+
+    #username-container,
+    #email-container {
+        flex-wrap: wrap;
+        width: 100% !important;
+        justify-content: center;
+        gap: 0;
+    }
+
+    #cancel,
+    #cancel-email {
+        margin-left: 0.5rem;
+    }
+}
+
+#warning-fields,#warning-fields-username {
+    color: white; /* Red text color for warning */
+    border: 3px solid red;
+    background-color: red;
+    font-size: 18px;
+    width: max-content;
+    text-align: center;
+    margin: 1rem auto;
+    border-radius: 5px;
+}
+
+#popup-changeUsername #password {
+    padding: 0.5rem;
 }
