Changed car order menu

--- a/public/auto-show.css
+++ b/public/auto-show.css
@@ -193,3 +193,7 @@ section h2 {
     border: 5px solid red;
     border-radius: 5px;
 }
+
+#car-manufacturer,#car-model,#car-year {
+    width: max-content;
+}
