--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@
 @import url(info-section.css);
 @import url(preview.css);
 @import url(footer.css);
-@import url(mobile.css);
+@import url(responsive-mobile.css);
 
 * {
     padding: 0;
