--- a/public/profile.css
+++ b/public/profile.css
@@ -244,7 +244,7 @@ input[type="password"]::-webkit-reveal {
 .order-status[status="Completed"] {
     border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
-    background-color: rgb(0, 255, 21);
+    background-color: rgb(83, 126, 87);
     font-weight: 599;
     position: relative;
 }
@@ -252,7 +252,7 @@ input[type="password"]::-webkit-reveal {
 .order-status[status="Expired"] {
     border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
-    background-color: rgb(197, 9, 9);
+    background-color: rgb(255, 0, 0);
     font-weight: 599;
     position: relative;
 }
@@ -285,7 +285,7 @@ input[type="password"]::-webkit-reveal {
 
 #cancel-order {
     display: inline-block;
-    background-color: #b90e0e;
+    background-color: #571a1a;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -296,7 +296,7 @@ input[type="password"]::-webkit-reveal {
 }
 
 #cancel-order:hover {
-    background-color: #6e2626 !important;
+    background-color: #882727 !important;
 }
 
 #modify-order {
