--- a/public/profile.css
+++ b/public/profile.css
@@ -304,7 +304,7 @@ input[type="password"]::-webkit-reveal {
 }
 
 #change-order:hover {
-    background-color: #d68f25 !important;
+    background-color: #ddb505 !important;
 }
 
 #cancel-order:hover {
